Try to fix spacing between meta data and content for gh

--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ p {
     padding-bottom: 20px;
 }
 
-/* <<<<<<<<<<<<<<<<<< CABINET >>>>>>>>>>>>>>>>>> */
+/* <<<<<<<<<<<<<<<<<< MAIN CABINET >>>>>>>>>>>>>>>>>> */
 #cabinet .curiosity-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -578,6 +578,7 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 10px;
+    padding-bottom: 10px;
     margin-top: 0px;
     /*background-color: yellow;*/
 }
